[package]
name = "derive_typst_intoval"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["typst", "derive"]
authors = ["KillTheMule <KillTheMule@users.noreply.github.com"]
repository = "https://github.com/KillTheMule/derive_typst_intoval"
description = "Derive typst::IntoValue for structs"

[lib]
proc-macro = true

[dependencies]
typst-macros = "0.14"
quote = "1.0.36"
syn = "2.0.61"
typst = "0.14"
heck = "0.5.0"
proc-macro2 = "1.0.82"
